<resources>
    <string name="app_name">Social World</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="user">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover">Discover</string>
    <string name="todo">TODO</string>
    <string name="create_a_story">Create a Story</string>
    <string name="setting">Setting</string>
    <string name="aboutText">An android developer designs software and applications for Android devices and the Google Play Store. This software developer creates apps used on Android phones and tablets</string>
    <string name="profession">Profession</string>
    <string name="name">Name</string>
    <string name="log_out">Log Out</string>
    <string name="create_post">Create Post</string>
    <string name="post">Post</string>
    <string name="title_activity_comment">CommentActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>