<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/discover"
                android:textColor="@color/black"
                android:textSize="@dimen/_24mdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/profile_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/profile_image" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/_40mdp"
                android:layout_height="@dimen/_40mdp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:padding="4dp"
                android:src="@drawable/user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/orange_circle"
                app:layout_constraintBottom_toBottomOf="@+id/profile_image"
                app:layout_constraintEnd_toEndOf="@+id/profile_image"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/profile_image"
                app:layout_constraintTop_toTopOf="@+id/profile_image"
                app:layout_constraintVertical_bias="0.461" />

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view1" />

            <ScrollView
                android:id="@+id/horizontalScrollView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:scrollbars="horizontal"
                android:fillViewport="true"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                tools:ignore="SpeakableTextPresentCheck">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.makeramen.roundedimageview.RoundedImageView
                            android:id="@+id/storyImage"
                            android:layout_width="@dimen/_130mdp"
                            android:layout_height="@dimen/_85mdp"
                            android:layout_marginStart="16dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/background"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:riv_border_color="#333333"
                            app:riv_border_width="2dip"
                            app:riv_corner_radius="10dip"
                            app:riv_mutate_background="true"
                            app:riv_tile_mode="repeat" />

                        <View
                            android:id="@+id/view3"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:background="@drawable/black_shade"
                            app:layout_constraintBottom_toBottomOf="@+id/storyImage"
                            app:layout_constraintEnd_toEndOf="@id/storyImage"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintStart_toStartOf="@+id/storyImage"
                            app:layout_constraintTop_toTopOf="@+id/storyImage"
                            app:layout_constraintVertical_bias="0.0" />

                        <ImageView
                            android:id="@+id/ImageView"
                            android:layout_width="@dimen/_30mdp"
                            android:layout_height="@dimen/_30mdp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/plus"
                            app:layout_constraintBottom_toBottomOf="@+id/storyImage"
                            app:layout_constraintEnd_toEndOf="@+id/storyImage"
                            app:layout_constraintStart_toStartOf="@+id/storyImage"
                            app:layout_constraintTop_toTopOf="@+id/storyImage"
                            app:layout_constraintVertical_bias="0.29"
                            tools:ignore="ImageContrastCheck" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/baloo"
                            android:text="@string/create_a_story"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            app:layout_constraintEnd_toEndOf="@+id/ImageView"
                            app:layout_constraintHorizontal_bias="0.473"
                            app:layout_constraintStart_toStartOf="@+id/ImageView"
                            app:layout_constraintTop_toBottomOf="@+id/ImageView" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/storyRV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp" />

                </LinearLayout>
            </ScrollView>

            <View
                android:id="@+id/view4"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2" />

            <com.cooltechworks.views.shimmer.ShimmerRecyclerView
                android:id="@+id/dashboardRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view4"
                app:shimmer_demo_child_count="10"
                app:shimmer_demo_layout="@layout/demo_shimmer_post" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>